# robotic_arm_kinematics

./: CMakeLists.txt  README.md  RUN.md  pyproject.toml  setup.py
app/: main.cpp
examples/: benchmark.py  ik_joint_state_publisher_1dqp.py  interactive_target_marker.py  python_demo.py
include/super_ik_tsinghua_1dqp/: solver.hpp  types.hpp
nero_ik/: README.md  README_ros2_ik_marker.md  ik_joint_state_publisher.py  ik_solver.py  interactive_target_marker.py
piper_kinematics/: README.md
piper_kinematics/scripts/: interactive_pose_marker.py
python/: bindings.cpp
python/super_ik_tsinghua_1dqp/: __init__.py
src/: solver.cpp
